// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`useToastConfig Component Snapshot should render the useToastConfig Component successfully 1`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "style": {
      "backgroundColor": "#E5E5EA",
      "borderLeftColor": "#86EFAC",
      "borderRadius": 12,
      "height": 70,
      "marginTop": 20,
      "width": 343,
    },
    "text1Props": {
      "allowFontScaling": false,
      "maxFontSizeMultiplier": 1,
    },
    "text1Style": {
      "color": "#000000",
      "fontFamily": "Inter-Bold",
      "fontSize": 16,
      "lineHeight": 18,
    },
    "text2NumberOfLines": 2,
    "text2Props": {
      "allowFontScaling": false,
      "maxFontSizeMultiplier": 1,
    },
    "text2Style": {
      "color": "#000000E5",
      "fontFamily": "Inter-Regular",
      "fontSize": 14,
      "lineHeight": 16,
    },
  },
  "type": [Function],
}
`;

exports[`useToastConfig Component Snapshot should render the useToastConfig Component successfully 2`] = `
{
  "$$typeof": Symbol(react.transitional.element),
  "_owner": null,
  "_store": {},
  "key": null,
  "props": {
    "style": {
      "backgroundColor": "#E5E5EA",
      "borderLeftColor": "#E57373",
      "borderRadius": 12,
      "height": 70,
      "marginTop": 20,
      "width": 343,
    },
    "text1Props": {
      "allowFontScaling": false,
      "maxFontSizeMultiplier": 1,
    },
    "text1Style": {
      "color": "#000000",
      "fontFamily": "Inter-Bold",
      "fontSize": 16,
      "lineHeight": 18,
    },
    "text2NumberOfLines": 2,
    "text2Props": {
      "allowFontScaling": false,
      "maxFontSizeMultiplier": 1,
    },
    "text2Style": {
      "color": "#000000E5",
      "fontFamily": "Inter-Regular",
      "fontSize": 14,
      "lineHeight": 16,
    },
  },
  "type": [Function],
}
`;
